# rinasense

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.macros.linux  CMakeLists.txt  NOTICE  README-Tests.md  README.Arduino.md  README.Linux.md  README.md  rinasense.code-workspace  sdkconfig  sdkconfig.old
components/ARP826/: ARP826.c  CMakeLists.txt  cache.c
components/ARP826/include/: ARP826.h  ARP826_defs.h
components/ARP826/test/: CMakeLists.txt  test_arp826.c
components/BufferManagement/: BufferManagement.c  CMakeLists.txt
components/BufferManagement/include/: BufferManagement.h  unity_test_runner.h
components/BufferManagement/test/: CMakeLists.txt  test_buffer_management.c
components/BufferManagement/tests/: CMakeLists.txt  test_buffer_management.c
components/CdapProto/: ApplicationProcessNamingInfoMessage.pb.c  ApplicationProcessNamingInfoMessage.proto  CDAP.pb.c  CDAP.pb.h  CDAP.proto  CMakeLists.txt  CommonMessages.pb.c  CommonMessages.proto  ConnectionPoliciesMessage.pb.c  ConnectionPoliciesMessage.proto  EnrollmentInformationMessage.pb.c  EnrollmentInformationMessage.pb.h  EnrollmentInformationMessage.proto  FlowMessage.pb.c  FlowMessage.proto  NeighborArrayMessage.pb.c  NeighborArrayMessage.proto  NeighborMessage.pb.c  NeighborMessage.proto  PolicyDescriptorMessage.pb.c  PolicyDescriptorMessage.proto  QoSSpecification.pb.c  QoSSpecification.proto  pb_decode.c  refresh_proto.sh
components/CdapProto/include/: ApplicationProcessNamingInfoMessage.pb.h  CDAP.pb.h  CommonMessages.pb.h  ConnectionPoliciesMessage.pb.h  EnrollmentInformationMessage.pb.h  FlowMessage.pb.h  NeighborArrayMessage.pb.h  NeighborMessage.pb.h  PolicyDescriptorMessage.pb.h  QoSSpecification.pb.h  pb.h
components/Common/: CMakeLists.txt  arraylist.c  datapacker.c  error.c  hashtab.c  list.c  mac.c  netbuf.c  num_mgr.c  queue.c  rina_gpha.c  rina_ids.c  rina_name.c  rinasense_errors.c  rsrc.c  simple_queue.c
components/Common/include/: bit_array.h  list.h  mac.h  num_mgr.h  rina_gpha.h  rina_ids.h  rina_name.h  rsrc.h  unity_fixups.h
components/Common/test/: CMakeLists.txt  test_arraylist.c  test_bit_array.c  test_datapacker.c  test_error.c  test_ids.c  test_ids.c~  test_lists.c  test_mbufs.c  test_netbuf.c  test_num_mgr.c  test_queue.c  test_rina_gpha.c  test_rina_name.c  test_simple_queue.c
components/Common/tests/: CMakeLists.txt  test_bit_array.c  test_num_mgr.c
components/EFCP/: CMakeLists.txt  EFCP.c  connection.c  delim.c  dtp.c  efcpStructures.c
components/EFCP/include/: EFCP.h  connection.h  delim.h  dtp.h  efcpStructures.h
components/Enrollment/: CMakeLists.txt  Enrollment.c  Enrollment_Inbound.c  SerdesMsg.c  neighbor.c
components/Enrollment/include/: Enrollment.h  Enrollment_api.h  Enrollment_defs.h  Enrollment_obj.h  SerdesMsg.h
components/FlowAllocator/: CMakeLists.txt  FlowAllocator.c
components/FlowAllocator/include/: FlowAllocator.h  FlowAllocator_api.h  FlowAllocator_defs.h  FlowAllocator_obj.h
components/FreeRTOS-Plus-POSIX/: CMakeLists.txt
components/IPCP/: CMakeLists.txt  IPCP.c  IpcManager.c  cepIdm.c  common.c  factoryIPCP.c  ipcpIdm.c  normalIPCP.c  pidm.c  rstr.c
components/IPCP/include/: IPCP.h  IPCP_api.h  IPCP_events.h  IPCP_frames.h  IPCP_instance.h  IPCP_normal_api.h  IPCP_normal_defs.h  IpcManager.h  cepidm.h  common.h  factoryIPCP.h  ipcpIdm.h  normalIPCP.h  pidm.h  rina_buffers.h  rina_common.h  rina_common_port.h  rstr.h
components/IPCP/test/: CMakeLists.txt  test_ipcp.c
components/Mocks/: CMakeLists.txt
components/Mocks/IPCP/: ipcp.c
components/Mocks/NetworkInterface/: NetworkInterface.c
components/Mocks/Ribd/: ribd.c
components/NetworkInterface/: CMakeLists.txt  NetworkInterface.c
components/NetworkInterface/_test/: CMakeLists.txt  test_networkinterface_io.c
components/NetworkInterface/esp32/: CMakeLists.txt  NetworkInterface.c
components/NetworkInterface/include/: NetworkInterface.h
components/NetworkInterface/linux_tap/: NetworkInterface.c
components/NetworkInterface/mq/: NetworkInterface.c
components/NetworkInterface/test/: CMakeLists.txt  test_networkinterface_io.c
components/Portability/: CMakeLists.txt
components/Portability/arduino_esp32/: CMakeLists.txt  rslog.cpp  rsmem.cpp  rsutils.cpp
components/Portability/freertos_idf/: rserr.c  rslist.c  rslog.c  rsmem.c  rsthread.c
components/Portability/gcc/: rserr.c
components/Portability/linux/: CMakeLists.txt  posix_rslog.c  rsutils.c
components/Portability/linux_glib/: CMakeLists.txt  glib_rslist.c  glib_rsmem.c  posix_rslog.c
components/Portability/posix/: posix_rsqueue.c  posix_rssem.c  posix_rstime.c
components/Portability/test/: CMakeLists.txt  test_lists.c  test_queues.c  test_time.c
components/Portability/tests/: CMakeLists.txt  test_lists.c
components/RINA_API/: CMakeLists.txt  RINA_API.c
components/RINA_API/include/: RINA_API.h  RINA_API_flows.h
components/Ribd/: CMakeLists.txt  CdapMessage.c  Rib.c  Ribd.c  Ribd_connections.c  Ribd_loopback.c  Ribd_obj.c  Ribd_requests.c
components/Ribd/include/: CdapMessage.h  Rib.h  RibObject.h  Ribd.h  Ribd_api.h  Ribd_connections.h  Ribd_defs.h  Ribd_msg.h  Ribd_obj.h  Ribd_requests.h
components/Ribd/test/: CMakeLists.txt  test_cdap_message.c  test_rib.c
components/Rmt/: CMakeLists.txt  Rmt.c  du.c  pci.c
components/Rmt/include/: Rmt.h  du.h  pci.h  rmt.h
components/SerDes/: CMakeLists.txt  SerDesAData.c  SerDesEnrollment.c  SerDesFlow.c  SerDesMessage.c  SerDesNeighbor.c  SerdesMsg.c
components/SerDes/include/: SerDes.h  SerDesAData.h  SerDesEnrollment.h  SerDesFlow.h  SerDesMessage.h  SerDesNeighbor.h
components/SerDes/test/: CMakeLists.txt  test_SerDesMessage.c  test_SerDesNeighbor.c
components/ShimIPCP/: ARP826.c  CMakeLists.txt  ShimIPCP.c  cache.c  eth.c
components_mocks/mock_EFCP/: CMakeLists.txt  efcp.c
components_mocks/mock_FlowAllocator/: CMakeLists.txt  flowAllocator.c
components_mocks/mock_NetworkInterface/: CMakeLists.txt  NetworkInterface.c
test_arduino/: CMakeLists.txt  test_arduino.cpp
test_linux/: CMakeLists.txt  test_linux.c
(+190 files in other folders)
